--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,40 @@ h3 {
 .rating span {
   margin: 0.1rem;
 }
+
+/* Carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item-active {
+  display: flex;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  height: 300px;
+  margin: 40px auto;
+  padding: 30px;
+  border-radius: 50%;
+}
+
+.carousel a {
+  margin: 10px auto 0;
+  display: flex;
+}
+
+@media (max-width: 767px) {
+  .carousel-caption h2 {
+    font-size: 3vmin;
+    line-height: 3.6vmin;
+  }
+}
